--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Document</title>
-        <script src="jquery-2.1.0.min.js">
-        <script src="particle.js" type="text/javascript"></script>
+        <script src="jquery-2.1.0.min.js"></script>
     </head>
     <body>
+      <canvas width='500' height='500' id="canvas1">Get a better browser!</canvas>
+      <script src="particle.js" type="text/javascript"></script>
     </body>
 </html>
